--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Atividaden1"
+        android:theme="@style/Theme.AppCompat.NoActionBar"
+
         tools:targetApi="31">
         <activity
             android:name=".activity_cadastrar_os"
