--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar"
+        android:theme="@style/Theme.Atividaden1"
 
         tools:targetApi="31">
         <activity
@@ -32,6 +32,8 @@
         <activity android:name=".CadastroClienteActivity" />
         <activity android:name=".OsActivity" />
         <activity android:name=".CadastroOsActivity" />
+        <activity android:name=".ComentarioActivity"/>
+        <activity android:name=".SobreActivity"/>
     </application>
 
 </manifest>
