--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".ComentarActivity"/>
         <activity android:name=".SobreActivity"/>
         <activity android:name=".ComentariosActivity"/>
+        <activity android:name=".visualizarComentarioActivity"/>
     </application>
 
 </manifest>
